kubernetes/apps/media/soulsync/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: soulsync
  namespace: media
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: media
      conditions:
        - "[STATUS] == 200"
spec:
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  hostnames:
    - "soulsync.${SECRET_DOMAIN}" # yayamlls-disable-line
  rules:
    - backendRefs:
        - name: soulsync
          port: 8008
